--- a/src/App.css
+++ b/src/App.css
@@ -156,6 +156,7 @@ header{
   /* margin: 10px; */
   margin-left: 1px;
   height: 50px;
+  text-align: center;
   /* display: flex; */
   /* float: left; */
   /* margin-bottom: 50px; */
@@ -315,8 +316,13 @@ hr{
   width: 90px;
   display: inline;
   font-size: 16px;
-  margin-left:1px ;
-  margin-top: 2px;
+  padding-left:5px ;
+  /* margin-left:1px; */
+  margin-top: 1px;
+  padding-top: 1px;
+  text-align: center;
+  height: 4 7px;
+  justify-content: center;
   border: 2px solid black;
 }
 main {
