Add existing project files to Git

--- a/src/App.css
+++ b/src/App.css
@@ -321,7 +321,7 @@ hr{
   margin-top: 1px;
   padding-top: 1px;
   text-align: center;
-  height: 4 7px;
+  height: 47px;
   justify-content: center;
   border: 2px solid black;
 }
