--- a/src/coponents/Cart.css
+++ b/src/coponents/Cart.css
@@ -55,11 +55,12 @@
     display: flex;
 }
 .cancel{
-    margin-top: 47px;
-    margin-left:69% ;
+    margin-top: 22px;
+    margin-left:auto ;
+    margin-right: 13px;
     /* border-color: aqua; */
     font-weight: 200;
-    color: white;
+    color: rgb(14, 1, 1);
     /* background-color: aqua; */
     cursor: pointer;
 }
@@ -214,7 +215,7 @@ margin-top: -8px;
         margin-left:15px;
         margin-bottom: 12px;
         justify-content: flex-start;
-        width: 120px;
+        width: 140px;
         height: 180px;
         /* border: 2px solid black; */
       }
@@ -292,7 +293,7 @@ margin-top: -8px;
         height: 3vh;
     }.cancel{
         /* margin-top: 24px; */
-        margin-left:45% ;
+        /* margin-left:45% ; */
         /* margin-right: 2px; */
         font-size: 21px;
         /* justify-content: end; */
