--- a/src/coponents/Login.css
+++ b/src/coponents/Login.css
@@ -12,7 +12,12 @@
   border: 1px solid #ccc;
   background-color: #fff;
 }
-
+.errormsg{
+  color: red;
+  font-size: 1.4rem;
+  font-weight: 600;
+  margin-left:-212px;
+}
 .login-form h2 {
   text-align: center;
   margin-bottom: 20px;
