--- a/src/coponents/Login.css
+++ b/src/coponents/Login.css
@@ -92,4 +92,8 @@ button:hover {
     border: 1px solid #ccc;
     border-radius: 4px;
   }
+  .errormsg{
+    font-size: 1rem;
+    margin-left:-112px;
+  }
 }
